Revisao do projeto

--- a/app/src/main/res/layout-v17/add_stock_dialog.xml
+++ b/app/src/main/res/layout-v17/add_stock_dialog.xml
@@ -9,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/add_symbol_margin"
-        android:layout_marginLeft="@dimen/add_symbol_margin"
-        android:layout_marginRight="@dimen/add_symbol_margin"
+        android:layout_marginStart="@dimen/add_symbol_margin"
+        android:layout_marginEnd="@dimen/add_symbol_margin"
         android:layout_marginTop="@dimen/add_symbol_margin_top"
         android:hint="@string/dialog_hint"
         android:contentDescription="@string/dialog_hint"
