--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -18,8 +18,8 @@
 
         <View
             android:layout_width="fill_parent"
-            android:layout_height="2dp"
-            android:padding="20dp"
+            android:layout_height="@dimen/separator_height"
+            android:padding="@dimen/separator_padding"
             android:background="@color/line_separator_color" />
 
 
