--- a/app/src/main/res/layout-v17/list_item_quote.xml
+++ b/app/src/main/res/layout-v17/list_item_quote.xml
@@ -5,8 +5,8 @@
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp">
 
     <TextView
         android:id="@+id/symbol"
@@ -36,8 +36,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/percent_change_pill_green"
-            android:paddingLeft="@dimen/padding_variation"
-            android:paddingRight="@dimen/padding_variation"
+            android:paddingStart="@dimen/padding_variation"
+            android:paddingEnd="@dimen/padding_variation"
             tools:text="@string/default_text_variation" />
     </LinearLayout>
 </LinearLayout>
