--- a/app/src/main/res/layout/stock_widget_list.xml
+++ b/app/src/main/res/layout/stock_widget_list.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff">
+    android:background="@color/widget_background">
     
     <LinearLayout
         android:layout_width="match_parent"
