--- a/app/src/main/res/layout/stock_widget_list_item.xml
+++ b/app/src/main/res/layout/stock_widget_list_item.xml
@@ -6,8 +6,8 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:id="@+id/widget_item"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin">
 
     <TextView
         android:id="@+id/symbol_widget"
@@ -15,10 +15,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="start|center_vertical"
-        tools:text="GOOG" />
+        tools:text="@string/default_symbol_text" />
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="@dimen/no_width"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="end">
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            tools:text="1000.00" />
+            tools:text="@string/default_price_text" />
 
         <TextView
             android:id="@+id/change_widget"
@@ -37,8 +37,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/percent_change_pill_green"
-            android:paddingLeft="3dp"
-            android:paddingRight="3dp"
-            tools:text="100%" />
+            android:paddingLeft="@dimen/padding_variation"
+            android:paddingRight="@dimen/padding_variation"
+            tools:text="@string/default_text_variation" />
     </LinearLayout>
 </LinearLayout>
